--- a/index.html
+++ b/index.html
@@ -5,17 +5,62 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body ng-controller="mainCtrl">
+  <body ng-controller="mainCtrl" class="mainBody">
+    <header class="header">
+
+    </header>
     <div class="main-container">
       <h1> DevMountain Chat Room </h1>
+      <h4> The place we all chat **Press Enter to Post**</h4>
       <form ng-submit="postMessage(message)">
-        <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
+        <input class="form-control text-box" type="text" ng-model="message" placeholder="Compose Message">
       </form>
-      <div class="messages-container">
+      <!-- <div class="messages-container">
         <p ng-repeat="message in messages ">
           {{message.message}} </p>
-      </div>
+      </div> -->
     </div>
+    <div class="message-container">
+      <div class="tableBox">
+
+
+    <table cellspacing='0' class=""> <!-- cellspacing='0' is important, must stay -->
+
+    	<!-- Table Header -->
+    	<thead>
+    		<tr>
+    			<th>Message</th>
+    			<th>Time Posted</th>
+    			<!-- <th>Vital Task</th> -->
+    		</tr>
+    	</thead>
+    	<!-- Table Header -->
+
+    	<!-- Table Body -->
+    	<tbody>
+
+    		<tr ng-repeat="message in messages">
+    			<td>{{message.message}}</td>
+          <!-- {{example.value | date: "hh:mm:ss"}} -->
+    			<td>{{message.createdAt | date: "h:mm a"}}</td>
+
+    		</tr><!-- Table Row -->
+
+
+    		<!-- <tr class="even">
+    			<td><a href="#yep-iit-doesnt-exist">Hyperlink 	Example</a></td>
+    			<td>80%</td>
+
+    		</tr> -->
+
+    	</tbody>
+    	<!-- Table Body -->
+
+    </table>
+      </div>
+
+    </div>
+
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
     <script src="js/app.js"></script>
